UNRELEASED, S3QL tip

  * Fixed a crash when using Google OAuth2 and the first request after
    the access token has expired is a write request.

  * mount.s3ql now supports systemd-style readyness notification. To
    use this feature, make sure that you have the 'systemd' module
    installed for Python 3.

    This feature has not been tested, if you use it or encounter
    problems, please report back.

  * Fixed a race condition that could cause tests/t5_failsafe.py to
    fail.

  * mount.s3ql no longer daemonizes on its own. With a modern init
    system this should no longer be necessary, and when running
    mount.s3ql from the command line the shell can be used to put the
    process into background.

  * There is a new --backend-options parameter that can be used to
    pass backend-specific options to any S3QL command that accepts a
    storage url.

  * The --no-ssl and --ssl-ca-path parameters have been removed. For
    those backends were these parameters make sense, you can use the
    backend options of the same name instead (e.g. instead of
    `--no-ssl` use `--backend-options no-ssl`).

  * Several backends now accept a `tcp-timeout` option. If S3QL is
    unable to communicate with the remote server for longer than this
    period, the TCP/IP connection is re-established.

  * The Amazon S3 backend now accepts a 'sse' option to enable server
    side encryption. Both costs & benefits of S3 server side
    encryption are probably very small, and this option does *not*
    affect any client side encryption performed by S3QL itself.

  * The Amazon S3 backend now accepts a 'rrs' option to enable reduced
    redundancy storage for any newly created objects.

2014-07-28, S3QL 2.10.1

  * 'setup.py install' now also installs the s3ql_verify command.

2014-07-27, S3QL 2.10

  * The internal file system revision has changed. File systems
    created with S3QL 2.10 or newer are not compatible with prior S3QL